...
    newTestament: false,
    chapterCount: 50,
    usfmCode: 'GEN',
    blbCode: 'Gen',
    locales: {
      de: {
        name: 'Genesis',
        abbreviations: [
          'Gen',
          '1. Mose',
        ],
      },
      en: {
...
